[package]
name = "refyne"
version = "0.1.14"
edition = "2021"
rust-version = "1.83"
description = "Official Rust SDK for the Refyne API - LLM-powered web extraction"
license = "MIT"
repository = "https://github.com/jmylchreest/refyne-sdk-rust"
documentation = "https://docs.rs/refyne"
homepage = "https://docs.refyne.uk/docs/sdks/rust"
readme = "README.md"
keywords = ["refyne", "web-scraping", "extraction", "llm", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time"] }
thiserror = "2.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
indicatif = "0.17"
colored = "2.0"

[features]
default = []

[[example]]
name = "basic_extraction"
path = "examples/basic_extraction.rs"

[[example]]
name = "full_demo"
path = "examples/full_demo.rs"
